configs/iptables.v4
-P INPUT ACCEPT
-P FORWARD ACCEPT
-P OUTPUT ACCEPT
-N API
-N METRICS
-N SSH
-A INPUT -m set --match-set sshblock src -j DROP
-A INPUT -m set --match-set threatblock src -j DROP
-A INPUT -m set --match-set permablock src -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j SSH
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 123 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m udp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 853 -j ACCEPT
-A INPUT -p udp -m udp --dport 853 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8083 -j API
-A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT
-A INPUT -p udp -m udp --dport 8443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9090 -j ACCEPT
-A INPUT -j LOG
-A INPUT -j DROP
-A API -s allowedip/32 -j ACCEPT
-A API -s allowedip/32 -j ACCEPT
-A API -j DROP
-A METRICS -s allowedip/32 -j ACCEPT
-A METRICS -s allowedip/32 -j ACCEPT
-A METRICS -s allowedip/32 -j ACCEPT
-A METRICS -j DROP
-A SSH -s allowedip/32 -j ACCEPT
-A SSH -s allowedip/32 -j ACCEPT
-A SSH -j DROP
